# aniGamerPlus

./: .gitignore  Anime.py  ColorPrint.py  Config.py  Danmu.py  README.md  aniGamerPlus.py  build.bat  pyproject.toml  requirements.txt  spin.py
.github/workflows/: 38-python-build.yml  39-python-build.yml  Python-build.yml  Release-build.yml  latest-python-build.yml  python-build.yml  python-publish.yml
Dashboard/: Server.py
Dashboard/static/js/: settings_id_list.js
Dashboard/templates/: index.html
