[project]
name = "anigamerplus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "apscheduler>=3.11.2",
    "beautifulsoup4>=4.12.2",
    "chardet>=5.1.0",
    "flask>=2.1.3",
    "gevent>=22.8.0",
    "gevent-websocket>=0.10.1",
    "greenlet>=1.1.3",
    "lxml>=4.9.2",
    "markupsafe<2.1.0",
    "pip-system-certs>=4.0",
    "pyhttpx>=2.10.9",
    "pysocks>=1.7.1",
    "requests>=2.31.0",
    "termcolor>=2.3.0",
]

[dependency-groups]
dev = [
    "nuitka>=4.1.3",
    "pyinstaller>=6.21.0",
]
